@@ -838,6 +838,21 @@ or
 .Qc
 preselects the font.
 .El
+.Ss GtkFrame
+.Bl -tag -width "signals/callbacks"
+.It signals/callbacks
+none
+.It feedback
+none
+.It commands
+.Qo
+.Fa name Ns
+.Ic :set_label
+.Fa text
+.Qc
+replaces the frame label text with
+.Fa string .
+.El
 .Ss GtkImage
 .Bl -tag -width "signals/callbacks"
 .It signals/callbacks
